--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  text-align: start;
+  text-align: center;
   margin: 10px;
   padding: 0 20px;
   font-size: 20px;
   font-weight: 600;
-  width: 600px;
+  width: 100%;
 }
 h2 {
   margin: 0;
