--- a/src/components/ContactForm/Filter/Filter.module.css
+++ b/src/components/ContactForm/Filter/Filter.module.css
@@ -2,7 +2,7 @@
   padding: 0 20px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .filterLabel {
